# nitropulse

./: .gitignore  README.md  ci.yml  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  workspace.py
assets/config/gdd/: crop_base_temp.json  crop_bbch_k_b_coff.json  crop_gdd_thresh.json
assets/config/gdrive/: gdrive_credentials.json  token.json
assets/config/inversion/: crop_inversion_bounds.json
assets/inputs/GEE_Exports_S1_RISMA_with_data_20m/: RISMA_MB10_2010_to_2024_buffer20m.csv  RISMA_MB12_2010_to_2024_buffer20m.csv  RISMA_MB15_2010_to_2024_buffer20m.csv  RISMA_MB1_2010_to_2024_buffer20m.csv  RISMA_MB3_2010_to_2024_buffer20m.csv  RISMA_MB4_2010_to_2024_buffer20m.csv  RISMA_MB5_2010_to_2024_buffer20m.csv  RISMA_MB7_2010_to_2024_buffer20m.csv  RISMA_MB8_2010_to_2024_buffer20m.csv  RISMA_MB9_2010_to_2024_buffer20m.csv
assets/inputs/S1_CSV_files/: RISMA_MB13_2010_to_2024_buffer20m.csv  S1_Backscatter_RISMA_MB11_2010_to_2024_buffer20m.csv  S1_Backscatter_RISMA_MB14_2010_to_2024_buffer20m.csv  S1_Backscatter_RISMA_MB2_2010_to_2024_buffer20m.csv  S1_Backscatter_RISMA_MB6_2010_to_2024_buffer20m.csv
assets/outputs/: bbch_df.csv  inv_df.csv  pheno_df.csv
data/: df_bbch.csv  inv_df.csv
data/GEE_Exports_S1_RISMA_Buffer15m_refinedLee_reduce_regions/: RISMA_MB10_2015_to_2023_buffer15m.csv  RISMA_MB11_2015_to_2023_buffer15m.csv  RISMA_MB12_2015_to_2023_buffer15m.csv  RISMA_MB13_2015_to_2023_buffer15m.csv  RISMA_MB14_2015_to_2023_buffer15m.csv  RISMA_MB15_2015_to_2023_buffer15m.csv  RISMA_MB1_2015_to_2023_buffer15m.csv  RISMA_MB2_2015_to_2023_buffer15m.csv  RISMA_MB3_2015_to_2023_buffer15m.csv  RISMA_MB4_2015_to_2023_buffer15m.csv  RISMA_MB5_2015_to_2023_buffer15m.csv  RISMA_MB6_2015_to_2023_buffer15m.csv  RISMA_MB7_2015_to_2023_buffer15m.csv  RISMA_MB8_2015_to_2023_buffer15m.csv  RISMA_MB9_2015_to_2023_buffer15m.csv
src/inversion/: __init__.py  core.py  ensemble_rf.py  inverse.py  pheno.py  radar.py  risma.py
src/inversion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/nitropulse/: __init__.py  core.py  ensemble_rf.py  gdrive.py  inverse.py  pheno.py  radar.py  risma.py
src/nitropulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nitropulse/config/gdd/: crop_base_temp.json  crop_bbch_k_b_coff.json  crop_gdd_thresh.json
src/nitropulse/config/inversion/: crop_inversion_bounds.json
src/nitropulse/config/risma/: stations_texture.json
src/nitropulse/utils/: __init__.py  validation.py
tests/: bbch_df_test.ipynb  download_S1_df_test.ipynb  download_risma_df_test.ipynb  ensemble_rf_test.ipynb  inversion_df_test.ipynb  load_S1_df_test.ipynb  load_risma_df_test.ipynb  test_cli.py
