[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inversion"
version = "0.1.0" # Or read dynamically, see below
authors = [
    {name = "Morteza Khazaei", email = "morteza.khazaei@usherbrooke.ca"},
]
description = "SAR backscatter inversion"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"} # Assuming you have a LICENSE file, or use {text = "MIT"} for example
keywords = ["AIEM", "scattering", "remote sensing", "electromagnetics", "radar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physic of Microwave Remote Sensing",
]
dependencies = [
    "pandas>=2.2",

]