[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nitropulse"
version = "0.1.0"
authors = [
    {name = "Morteza Khazaei", email = "morteza.khazaei@usherbrooke.ca"},
]
description = "A precision tool for mapping nitrous oxide (N₂O) emission pulses in agricultural landscapes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["AIEM", "scattering", "remote sensing", "electromagnetics", "radar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "pandas",
    "seaborn",
    "scipy",
    "ipykernel",
    "earthengine-api",
    "geemap",
    "RISMA",
    "tqdm",
    "joblib"
]
[project.scripts]
nitropulse = "nitropulse.core:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nitropulse = ["config/gdd/*.json", "config/inversion/*.json"]