[metadata]
name = inversion
version = 0.1.0
author = Morteza Khazaei
author_email = morteza.khazaei@usherbrooke.ca
description = SAR inversion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Morteza-Khazaei/inversion
keywords = AIEM, scattering, remote sensing, electromagnetics, radar
# license = MIT # Use SPDX identifier if not using license_files
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython # Default, often implied
    # Programming Language :: Python :: Implementation :: PyPy # Remove if not tested/supported
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Mathematics 
    Topic :: Scientific/Engineering :: Physics of Microwave Remote Sensing
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Physics of Electromagnetics
    Topic :: Scientific/Engineering :: Physics of Radar
    Topic :: Scientific/Engineering :: Physics of Scattering
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Scattering
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Waves
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Radiation
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Theory
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Fields
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Waves
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Interactions
    Topic :: Scientific/Engineering :: Physics of Electromagnetic Phenomena
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=2.2

[options.packages.find]
where = src